@@ -1,3 +1,9 @@
+2011-08-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/50092
+	* config/i386/i386.c (assign_386_stack_local): Call validize_mem
+	on the result before returning it.
+
 2011-08-16  Liang Wang  <lwang1@marvell.com>
 
 	* ggc.h (ggc_alloc_rtvec_sized): Change arguments of
